# IC-Vetoriais

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: test.yml
.xp-stack/: index.json  manifest.json
code/: .env.example  Makefile  README.md  docker-compose.ui.yml  docker-compose.yml  pyproject.toml  requirements.txt
code/ground_truth/: exact_search.py
code/lib/: metrics.py
code/pipeline/: embeddings.py  ms_marco_loader.py
code/seeders/: pgvector_seeder.py  qdrant_seeder.py  weaviate_seeder.py
code/tests/integration/: test_embeddings_real.py  test_seeders.py  test_smoke.py
code/tests/unit/: test_basic.py  test_embeddings.py  test_ground_truth.py  test_loader.py  test_metrics.py
docs/tasks/: etapa-2-preparacao-ambiente.md
docx/: OFC- Planejamento Rafael Nobre - 2026.docx  relatorio_parcial.docx
docx/relatorio_parcial/: .gitignore  Makefile  README.md  main.tex  refs.bib
vault/_templates/: decisão.md  draft.md  experimento.md  paper.md  referência.md
vault/decisões/: 2026-04-28-cenarios-A-B-C.md  2026-04-28-dataset-ms-marco.md  2026-04-28-modelo-embedding-minilm.md  2026-04-28-sistemas-avaliados.md  2026-04-28-tamanhos-100k-500k-1m.md  2026-04-28-índice-hnsw-em-todos.md  2026-05-05-isolamento-ui-vs-benchmark.md  2026-05-05-migracao-relatorio-para-latex.md  2026-05-05-versoes-imagens-docker.md  2026-05-06-bump-versoes-sgbds.md
vault/experimentos/: 2026-05-10-validacao-embeddings-100-passages.md
vault/lições/: 2026-05-05-armadilhas-dia-1-etapa-2.md  2026-05-05-erro-recomendacao-weaviate-cloud-console.md  2026-05-05-rigor-citacoes-abnt.md  (+3 more)
(+29 files in other folders)
